Fix splash styling on mobile devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,8 +23,10 @@ body {
     color: $color-bright;
 }
 
+.section {
+    width: 100%;
+}
 .container {
-    width: 1024px;
     margin: 0 auto;
 }
 
@@ -163,4 +165,71 @@ header {
 
 .about p:first-of-type {
     text-align: center;
+}
+
+/* Responsive */
+
+@media only screen and (max-width: 576px) {
+    .container {
+        max-width: 100%;
+    }
+    .header, .header .container, .flex-box {
+        height: 120px;
+    }
+    .navigation {
+        padding: 0;
+        flex: 1;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 60px;
+        justify-content: space-evenly;
+    }
+    .logo {
+        margin: 30px auto;
+        flex: 1;
+        height: 60px;
+        width: fit-content;
+    }
+    .flex-box {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .flex-container {
+        padding-top: 100px;
+    }
+    .splash-title {
+        font-size: 36px;
+    }
+    .splash-subtitle {
+        font-size: 16px;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .container {
+        max-width: 540px;
+    }
+    .navigation {
+        width: 60%;
+    }
+    .flex-container {
+        padding-top: 60px;
+    }
+    .splash-title {
+        font-size: 36px;
+    }
+}
+@media only screen and (min-width: 992px) {
+    .container {
+        max-width: 720px;
+    }
+}
+@media only screen and (min-width: 1200px) {
+    .container {
+        max-width: 960px;
+    }
+}
+@media only screen and (min-width: 1400px) {
+    .container {
+        max-width: 1140px;
+    }
 }
